# federlieb

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  conanfile.py  conanfile.txt  extensions.cxx  main.cxx  mini.cxx
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: federlieb-build.yml
ext/: fx_bits.cxx  fx_bits.hxx  fx_counter.cxx  fx_counter.hxx  fx_infinity.cxx  fx_infinity.hxx  fx_kcrypto.cxx  fx_kcrypto.hxx  fx_median.cxx  fx_median.hxx  fx_only_value.cxx  fx_only_value.hxx  fx_ordered_concat_agg.cxx  fx_ordered_concat_agg.hxx  fx_statistics.cxx  fx_statistics.hxx  fx_toset.cxx  fx_toset.hxx  fx_utility.cxx  vt_articulation_points.cxx  vt_articulation_points.hxx  vt_bfs.cxx  vt_bfs.hxx  vt_bgl.hxx  vt_biconnected_components.cxx  vt_biconnected_components.hxx  vt_colormap.cxx  vt_colormap.hxx  vt_contraction.cxx  vt_contraction.hxx  vt_dfa.cxx  vt_dfa.hxx  vt_dijkstra_shortest_paths.cxx  vt_dijkstra_shortest_paths.hxx  vt_dominator_tree.cxx  vt_dominator_tree.hxx  vt_json_each.cxx  vt_json_each.hxx  vt_miniucd.cxx  vt_miniucd.hxx  (+18 more)
src/federlieb/: api.hxx  as.cxx  as.hxx  column.cxx  column.hxx  concepts.hxx  context.cxx  context.hxx  db.cxx  db.hxx  detail.cxx  detail.hxx  error.cxx  error.hxx  federlieb.hxx  field.cxx  field.hxx  fx.hxx  json.cxx  json.hxx  pragma.cxx  pragma.hxx  row.cxx  row.hxx  stmt.cxx  stmt.hxx  value.cxx  value.hxx  vtab.cxx  vtab.hxx
tests/: test_simple.py
